frontend/tests/errors/ER-005/runtime_variable_size/test.vx
// @rfc: docs/vexel-rfc.md#errors--diagnostics
// @desc: Array size not being a compile-time constant is a compile-time error | Array size not compile-time constant: runtime variable


&^main() -> #i32 {
    len:#i32 = 5;
    data:#i32[len];
    0;
}
